@@ -1,0 +1,12 @@
+Package: testRcppInterfaceExporter
+Title: Exports c++ function via the cpp interface
+Version: 0.1.0
+Authors@R: 'Lionel Henry <lionel@rstudio.com> [aut, cre]'
+Description: The API package.
+Depends:
+    R (>= 3.1.0)
+Imports:
+    Rcpp
+LinkingTo:
+    Rcpp
+License: GPL-3
